--- a/css/alan.css
+++ b/css/alan.css
@@ -6,3 +6,11 @@
 .hidden {
   display: none;
 }
+
+/* vylepsení ostrosti na retina obrazovkách */
+canvas {
+  image-rendering: -moz-crisp-edges;
+  image-rendering: -webkit-crisp-edges;
+  image-rendering: pixelated;
+  image-rendering: crisp-edges;
+}
