--- a/css/alan.css
+++ b/css/alan.css
@@ -30,7 +30,7 @@ body {
   overflow-x: scroll;
   padding: 10px;
   grid-area: editor;
-  
+
 }
 
 main {
@@ -119,7 +119,7 @@ main {
 }
 
 a.level:hover {
-  background-color: #AAAAAA;
+  background-color: #CCC;
 }
 
 .level-details p {
