--- a/css/alan.css
+++ b/css/alan.css
@@ -16,26 +16,13 @@ body {
   background-color: #0BAFAF;
 }
 
-#textarea {
-  height: 698px;
-  width: 498px;
-  box-sizing: border-box;
-  border: none;
-  resize: none;
-  overflow-x: scroll;
-  padding: 10px;
-  grid-area: editor;
-}
-
 main {
   display: grid;
+  gap: 0 2vw;
   margin: auto;
-  gap: 0 3vw;
-  max-width: 1500px;
-  align-items: center;
-
-  grid-template-columns: 1000px auto;
-  grid-template-rows: auto 700px auto 80px;
+  width: calc(1400px + 2vw);
+  grid-template-columns: auto auto;
+  grid-template-rows: auto 645px auto 5em;
   box-sizing: border-box;
 
   grid-template-areas:
@@ -53,7 +40,8 @@ main {
 
 .editor {
   height: 700px;
-  box-sizing: border-box;
+  width: 500px;
+  margin-top: -4em;
   grid-area: editor;
 }
 
@@ -71,8 +59,8 @@ main {
 
 .controls {
   grid-area: controls;
-  align-self: start;
   justify-self: end;
+  margin-top: 1em;
 }
 
 .controls a {
@@ -81,16 +69,15 @@ main {
   min-width: 75px;
   padding: 14px;
   text-align: center;
-  margin-top: 10px;
-  margin-left: 8px;
   text-decoration: none;
 }
 
 .levels {
-  display: flex;
-  justify-content: flex-start;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 55px);
+  gap: 1em;
   grid-area: levels;
+  margin-top: 1em;
 }
 
 .level-details {
@@ -102,12 +89,9 @@ main {
   background-color: rgb(94, 181, 189);
   color: white;
   font-weight: bold;
-  flex-basis: 55px;
   padding: 14px 0;
   text-align: center;
-  margin-top: 10px;
   text-decoration: none;
-  margin-right: 10px;
   font-size: 1.5em;
   border-radius: 2px;
 }
@@ -117,7 +101,7 @@ main {
 }
 
 .selected-level {
-  background-color: rgb(74, 153, 150);  
+  background-color: rgb(74, 153, 150);
 }
 
 a.level:hover {
@@ -151,6 +135,7 @@ small {color: white;}
 
 .credit {
   grid-area: blockly;
+  align-self: center;
   justify-self: end;
 }
 
