oprava chybné responzivity

--- a/css/alan.css
+++ b/css/alan.css
@@ -18,10 +18,10 @@ body {
 
 main {
   display: grid;
-  gap: 0 1vw;
+  gap: 0 2vw;
   margin: auto;
-  width: calc(1300px + 1vw);
-  grid-template-columns: auto auto;
+  width: calc(1350px + 2vw);
+  grid-template-columns: 2fr 2fr;
   grid-template-rows: auto 600px auto 5em;
   box-sizing: border-box;
 
@@ -33,13 +33,13 @@ main {
 }
 
 #blockly {
-  height: 750px;
-  width: 500px;
+  height: 700px;
+  width: 100%;
   box-sizing: border-box;
 }
 
 .editor {
-  width: 500px;
+  width: 100%;
   margin-top: 1vw;
   grid-area: editor;
 }
@@ -179,4 +179,10 @@ small {color: white; font-size: 1em;}
   color: white;
   font-size: 1.5em;
   margin-top: 0.5vw;
+}
+
+@media screen and (max-width: 1400px) {
+  main {
+    width: 100%;
+  }
 }
