--- a/css/alan.css
+++ b/css/alan.css
@@ -14,15 +14,18 @@ body {
   image-rendering: pixelated;
   image-rendering: crisp-edges;
   background-color: #0BAFAF;
+
+  width: min(65vw, 900px);
+  height: min(44vw, 600px);
 }
 
 main {
   display: grid;
   gap: 0 2vw;
   margin: auto;
-  width: calc(1350px + 2vw);
-  grid-template-columns: 2fr 2fr;
-  grid-template-rows: auto 600px auto 5em;
+  max-width: calc(1350px + 2vw);
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: fit 550px auto auto;
   box-sizing: border-box;
 
   grid-template-areas:
@@ -33,8 +36,7 @@ main {
 }
 
 #blockly {
-  height: 700px;
-  width: 100%;
+  height: 730px;
   box-sizing: border-box;
 }
 
@@ -48,9 +50,7 @@ main {
   border-radius: 2px;
 }
 
-
 .mapa {
-  height: 700px;
   grid-area: map;
 }
 
@@ -123,6 +123,7 @@ a.level:hover {
   display: block;
   grid-area: credit;
   align-self: center;
+  margin-top: 2vw;
 }
 
 .authors a {
@@ -135,6 +136,7 @@ small {color: white; font-size: 1em;}
   grid-area: blockly;
   align-self: center;
   justify-self: end;
+  margin-top: 2vw;
 }
 
 .credit img {
@@ -181,8 +183,22 @@ small {color: white; font-size: 1em;}
   margin-top: 0.5vw;
 }
 
-@media screen and (max-width: 1400px) {
-  main {
-    width: 100%;
-  }
+@media screen and (max-width: 1200px) {
+#deska {
+  width: min(50vw, 900px);
+  height: min(34vw, 600px);
+}
+main {
+  grid-template-areas:
+    "level editor"
+    "map editor"
+    "levels controls"
+    "credit credit";
+}
+
+.credit{display: none;}
+
+#blockly {
+  height: 50vw;
+}
 }
