--- a/css/alan.css
+++ b/css/alan.css
@@ -1,3 +1,5 @@
+/* psano ve spechu, neni vubec pekne, radeji nectete */
+
 body {
   font-size: 16px;
   font-family: 'IBM Plex Sans', sans-serif;
@@ -60,7 +62,7 @@ main {
 .controls a {
   display: inline-block;
   background-color: #E4E4E4;
-  min-width: 75px;
+  min-width: 55px;
   padding: 13px;
   text-align: center;
   text-decoration: none;
@@ -151,6 +153,11 @@ small {color: white; font-size: 0.8em;}
   border-radius: 2px;
 }
 
+.button svg{
+  height: 1.25em;
+  margin-bottom: -3px;
+}
+
 #start, #stop {
   background-color: rgb(229, 133, 55);
 }
@@ -167,9 +174,7 @@ small {color: white; font-size: 0.8em;}
   background-color: rgb(74, 153, 150);
 }
 
-#stop {
-  display: none;
-}
+#stop {display: none;}
 
 #popis-levelu {
   background-color: #0BAFAF; /* zelene pozadi */
@@ -180,7 +185,53 @@ small {color: white; font-size: 0.8em;}
   margin-bottom: 0;
 }
 
+.screen {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: rgba(0,0,0,0.7);
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  display: none;
+  align-items: center;
+  justify-content: center;
+}
 
+.screen a {color: white;}
+.screen__window {
+  position: relative;
+  width: max(400px, 30%);
+  padding: 3vw;
+  color: white;
+  background-color: #0BAFAF;
+  border-radius: 2px;
+}
+
+.screen__window button {
+  background-color: rgb(138, 171, 61);
+  min-width: 55px;
+  padding: 13px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.screen__window .button--icon {
+  background-color: #0BAFAF;
+  position: absolute;
+  top: 1em;
+  right: 1em;
+}
+
+.screen__window .button--red {
+    background-color: rgb(212, 88, 83);
+    margin-top: 1em;
+}
+
+.text--orange {
+  color: orange;
+}
 
 @media screen and (max-width: 1350px) {
   main {
